# exiftool-haskell

./: CHANGELOG.md  LICENSE  README.md  exiftool.cabal
.github/workflows/: ci.yml
lib/: ExifTool.hs
src/: ExifTool.hs
